--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2015", "esnext.asynciterable"],
+    "lib": ["es2017", "esnext.asynciterable"],
     "sourceMap": true,
     "typeRoots": ["./node_modules/@types", "./types"],
-    "types": ["node", "truffle-contracts"],
+    "types": ["@types/node", "@types/chai", "@types/mocha"],
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
