--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@ Bank.sol.txt
 Exchange.sol.txt
 tenderly.yaml.txt
 .idea
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
